--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,7 +22,7 @@ title: RubeFarm
 email: jason@rubefarm.com
 description: ""
 domain: "rubefarm.com"
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/docs" # the subpath of your site, e.g. /blog
 url: "https://rubefarm.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ""
 github_username: ""
